--- a/assignments/Mod3/foundItems.html
+++ b/assignments/Mod3/foundItems.html
@@ -12,8 +12,8 @@
 		<td class="name-col">{{item.name}}</td>
 		<td class="shortname-col">{{item.short_name}}</td>
 		<td class="description-col">{{item.description}}</td>
-    <td><button ng-click="ctrl.onRemove({index: $index});">Don't want this one!</button></td>
+    <td><button class="btn btn-danger" ng-click="ctrl.onRemove({index: $index});">Don't want this one!</button></td>
 	</tr>
 	</tbody>
 </table>
-<div class="error" ng-show="ctrl.isEmpty()">Nothing found</div>
+<div class="alert alert-warning" ng-show="ctrl.isEmpty()"><strong>Nothing found</strong></div>
